// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/admin_console/admin_user_card/admin_user_card should match default snapshot 1`] = `
<div>
  <div
    class="AdminUserCard"
  >
    <div
      class="AdminUserCard__header"
    >
      <wc-contact-sheet
        background-color="transparent"
        class="status-wrapper style--none admin-user-card"
        is-external="false"
        k-chat-team-name="team1"
        presence="offline"
        prevent-open-on-hover="true"
        prevent-stop-propagation="true"
        size="md"
        src="/api/v4/users/1234/image"
        style="border-radius: 50%; width: 128px; height: 128px;"
        user-name="undefined undefined"
      >
        <span
          class="status-wrapper style--none admin-user-card"
          slot="trigger"
        >
          <span
            class="profile-icon "
          >
            <img
              alt="user profile image"
              class="Avatar Avatar-xxl"
              loading="lazy"
              src="/api/v4/users/1234/image"
            />
          </span>
        </span>
      </wc-contact-sheet>
      <div
        class="AdminUserCard__user-info"
      >
        <span>
          Jim
           
          Halpert
        </span>
        <span>
           • 
        </span>
        <span
          class="AdminUserCard__user-nickname"
        >
          Big Tuna
        </span>
      </div>
      <div
        class="AdminUserCard__user-id"
      >
        User ID: 1234
      </div>
    </div>
    <div
      class="AdminUserCard__body"
    />
    <div
      class="AdminUserCard__footer"
    />
  </div>
</div>
`;

exports[`components/admin_console/admin_user_card/admin_user_card should match snapshot if no first/last name is defined 1`] = `
<div>
  <div
    class="AdminUserCard"
  >
    <div
      class="AdminUserCard__header"
    >
      <wc-contact-sheet
        background-color="transparent"
        class="status-wrapper style--none admin-user-card"
        is-external="false"
        k-chat-team-name="team1"
        presence="offline"
        prevent-open-on-hover="true"
        prevent-stop-propagation="true"
        size="md"
        src="/api/v4/users/1234/image"
        style="border-radius: 50%; width: 128px; height: 128px;"
        user-name="undefined undefined"
      >
        <span
          class="status-wrapper style--none admin-user-card"
          slot="trigger"
        >
          <span
            class="profile-icon "
          >
            <img
              alt="user profile image"
              class="Avatar Avatar-xxl"
              loading="lazy"
              src="/api/v4/users/1234/image"
            />
          </span>
        </span>
      </wc-contact-sheet>
      <div
        class="AdminUserCard__user-info"
      >
        <span>
           
        </span>
        <span
          class="AdminUserCard__user-nickname"
        >
          Big Tuna
        </span>
      </div>
      <div
        class="AdminUserCard__user-id"
      >
        User ID: 1234
      </div>
    </div>
    <div
      class="AdminUserCard__body"
    />
    <div
      class="AdminUserCard__footer"
    />
  </div>
</div>
`;

exports[`components/admin_console/admin_user_card/admin_user_card should match snapshot if no first/last name or nickname is defined 1`] = `
<div>
  <div
    class="AdminUserCard"
  >
    <div
      class="AdminUserCard__header"
    >
      <wc-contact-sheet
        background-color="transparent"
        class="status-wrapper style--none admin-user-card"
        is-external="false"
        k-chat-team-name="team1"
        presence="offline"
        prevent-open-on-hover="true"
        prevent-stop-propagation="true"
        size="md"
        src="/api/v4/users/1234/image"
        style="border-radius: 50%; width: 128px; height: 128px;"
        user-name="undefined undefined"
      >
        <span
          class="status-wrapper style--none admin-user-card"
          slot="trigger"
        >
          <span
            class="profile-icon "
          >
            <img
              alt="user profile image"
              class="Avatar Avatar-xxl"
              loading="lazy"
              src="/api/v4/users/1234/image"
            />
          </span>
        </span>
      </wc-contact-sheet>
      <div
        class="AdminUserCard__user-info"
      >
        <span>
           
        </span>
        <span
          class="AdminUserCard__user-nickname"
        />
      </div>
      <div
        class="AdminUserCard__user-id"
      >
        User ID: 1234
      </div>
    </div>
    <div
      class="AdminUserCard__body"
    />
    <div
      class="AdminUserCard__footer"
    />
  </div>
</div>
`;

exports[`components/admin_console/admin_user_card/admin_user_card should match snapshot if no nickname is defined 1`] = `
<div>
  <div
    class="AdminUserCard"
  >
    <div
      class="AdminUserCard__header"
    >
      <wc-contact-sheet
        background-color="transparent"
        class="status-wrapper style--none admin-user-card"
        is-external="false"
        k-chat-team-name="team1"
        presence="offline"
        prevent-open-on-hover="true"
        prevent-stop-propagation="true"
        size="md"
        src="/api/v4/users/1234/image"
        style="border-radius: 50%; width: 128px; height: 128px;"
        user-name="undefined undefined"
      >
        <span
          class="status-wrapper style--none admin-user-card"
          slot="trigger"
        >
          <span
            class="profile-icon "
          >
            <img
              alt="user profile image"
              class="Avatar Avatar-xxl"
              loading="lazy"
              src="/api/v4/users/1234/image"
            />
          </span>
        </span>
      </wc-contact-sheet>
      <div
        class="AdminUserCard__user-info"
      >
        <span>
          Jim
           
          Halpert
        </span>
        <span
          class="AdminUserCard__user-nickname"
        />
      </div>
      <div
        class="AdminUserCard__user-id"
      >
        User ID: 1234
      </div>
    </div>
    <div
      class="AdminUserCard__body"
    />
    <div
      class="AdminUserCard__footer"
    />
  </div>
</div>
`;
